--- a/css/scratchx.css
+++ b/css/scratchx.css
@@ -35,6 +35,7 @@ body {
 article,
 aside,
 details,
+dialog,
 figcaption,
 figure,
 footer,
@@ -362,6 +363,24 @@ td,
 th {
   padding: 0; }
 
+/* Dialogs
+   ========================================================================== */
+/**
+ * Destroy normal layout for dialogs
+ */
+dialog {
+  position: static;
+  border: none;
+  background-color: inherit;
+  width: auto;
+  height: auto;
+  left: auto;
+  right: auto;
+  top: auto;
+  bottom: auto;
+  padding: 0;
+  color: inherit; }
+
 button, input[type="button"], input[type="reset"], input[type="submit"],
 button {
   -webkit-appearance: none;
@@ -370,7 +389,7 @@ button {
   -o-appearance: none;
   appearance: none;
   -webkit-font-smoothing: antialiased;
-  background-color: #477dca;
+  background-color: #21b4f0;
   border-radius: 3px;
   border: none;
   color: #fff;
@@ -388,7 +407,7 @@ button {
   button:hover, button:focus, input[type="button"]:hover, input[type="button"]:focus, input[type="reset"]:hover, input[type="reset"]:focus, input[type="submit"]:hover, input[type="submit"]:focus,
   button:hover,
   button:focus {
-    background-color: #2c5999;
+    background-color: #0c86b8;
     color: #fff; }
   button:disabled, input[type="button"]:disabled, input[type="reset"]:disabled, input[type="submit"]:disabled,
   button:disabled {
@@ -396,8 +415,8 @@ button {
     opacity: 0.5; }
 
 fieldset {
-  background-color: #f7f7f7;
-  border: 1px solid #ddd;
+  background-color: #fcfcfd;
+  border: 1px solid #dfe3e7;
   margin: 0 0 0.75em;
   padding: 1.5em; }
 
@@ -420,7 +439,7 @@ input[type="color"], input[type="date"], input[type="datetime"], input[type="dat
 select[multiple=multiple],
 textarea {
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #dfe3e7;
   border-radius: 3px;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
@@ -433,12 +452,12 @@ textarea {
   input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="email"]:hover, input[type="month"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="time"]:hover, input[type="url"]:hover, input[type="week"]:hover, textarea:hover,
   select[multiple=multiple]:hover,
   textarea:hover {
-    border-color: #c4c4c4; }
+    border-color: #c2c9d1; }
   input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="email"]:focus, input[type="month"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="time"]:focus, input[type="url"]:focus, input[type="week"]:focus, textarea:focus,
   select[multiple=multiple]:focus,
   textarea:focus {
-    border-color: #477dca;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
+    border-color: #21b4f0;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(16, 169, 232, 0.7);
     outline: none; }
 
 textarea {
@@ -489,13 +508,13 @@ table {
   width: 100%; }
 
 th {
-  border-bottom: 1px solid #b7b7b7;
+  border-bottom: 1px solid #b3bdc6;
   font-weight: 600;
   padding: 0.75em 0;
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #dfe3e7;
   padding: 0.75em 0; }
 
 tr,
@@ -509,7 +528,7 @@ body {
   -ms-font-feature-settings: "kern", "liga", "pnum";
   font-feature-settings: "kern", "liga", "pnum";
   -webkit-font-smoothing: antialiased;
-  color: #333;
+  color: #58595b;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
   font-size: 1em;
   line-height: 1.5; }
@@ -529,16 +548,16 @@ p {
   margin: 0 0 0.75em; }
 
 a {
-  color: #477dca;
+  color: #21b4f0;
   text-decoration: none;
   transition: color 0.1s linear; }
   a:active, a:focus, a:hover {
-    color: #2c5999; }
+    color: #0c86b8; }
   a:active, a:focus {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #dfe3e7;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -549,10 +568,17 @@ picture {
   margin: 0;
   max-width: 100%; }
 
-#scratch {
+dialog {
+  display: block;
+  position: static; }
+
+a[href=""] {
+  outline: 1px solid red; }
+
+#editor {
   text-align: center;
   margin-top: 30px;
-  visibility: hidden;
+  display: none;
   position: relative; }
 
 .scratch_unsupported p {
@@ -560,5 +586,50 @@ picture {
   font-size: 22px;
   margin-top: 14px;
   line-height: 28px; }
+
+body > main > header > div,
+body > main > article > header > div,
+body > main > article > section > div,
+body > main > footer > div {
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto; }
+  body > main > header > div::after,
+  body > main > article > header > div::after,
+  body > main > article > section > div::after,
+  body > main > footer > div::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+dialog {
+  float: left;
+  display: block;
+  margin-right: 1.25%;
+  width: 32.5%; }
+  dialog:last-child {
+    margin-right: 0; }
+
+footer section {
+  float: left;
+  display: block;
+  margin-right: 1.25%;
+  width: 32.5%;
+  margin-left: 8.4375%; }
+  footer section:last-child {
+    margin-right: 0; }
+footer nav {
+  float: left;
+  display: block;
+  margin-right: 1.25%;
+  width: 15.625%; }
+  footer nav:last-child {
+    margin-right: 0; }
+  footer nav:first-of-type {
+    margin-left: 8.4375%; }
+
+footer, main header {
+  background-color: #3f5975;
+  color: #fff; }
 
 /*# sourceMappingURL=scratchx.css.map */
