--- a/sass/base/_grid-settings.scss
+++ b/sass/base/_grid-settings.scss
@@ -1,14 +1,14 @@
 @import "../neat/neat-helpers";
 
 // Neat Overrides
-// $column: 90px;
-// $gutter: 30px;
-// $grid-columns: 12;
-// $max-width: em(1088);
+$column: 69px;
+$gutter: 12px;
+$grid-columns: 12;
+$max-width: em(960);
 
 // Neat Breakpoints
 $medium-screen: em(640);
-$large-screen: em(860);
+$large-screen: em(960);
 
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
