--- a/sass/base/_grid-settings.scss
+++ b/sass/base/_grid-settings.scss
@@ -12,3 +12,7 @@ $large-screen: em(960);
 
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
+
+// Vertical rhythm 
+
+$vertical-base: em(6);
