--- a/sass/_editor.scss
+++ b/sass/_editor.scss
@@ -1,8 +1,7 @@
 #editor {
-    text-align: center ;
-    margin-top: 30px;
-    display: none;
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .scratch_unsupported p {
