--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -81,7 +81,7 @@ article header h1 + p {
     @include shift(1);
 }
 
-body > main > article section {
+body > main > article > section {
     ul {
         @extend %default-ul;
     }
