Show/hide the editor by putting it on/off screen

--- a/css/scratchx.css
+++ b/css/scratchx.css
@@ -1027,7 +1027,8 @@ body > main > header {
 #editor {
   position: absolute;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  top: -9999px; }
 
 .scratch_unsupported p {
   color: #aaa;
