--- a/sass/scratchx.scss
+++ b/sass/scratchx.scss
@@ -40,11 +40,18 @@ body {
     }
 }
 
-#dialogs {
+#dialogs, #modal-dialogs .modal-inner {
     @include row();
     dialog {
         @include span-columns(4);
+        p {
+            text-align: center;
+        }
     }
+}
+
+#modal-dialogs .modal-inner {
+    background-color: transparent;
 }
 
 .extension-file {
