Rename swf object id back to scratch

--- a/css/scratchx.css
+++ b/css/scratchx.css
@@ -1159,7 +1159,7 @@ body > main > article {
   #home > section > div h2, #home > section > div p {
     text-align: center; }
 
-#editor {
+#scratch {
   position: absolute;
   width: 100%;
   height: 100%;
