--- a/css/scratchx.css
+++ b/css/scratchx.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic,600italic);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700);
 html {
   box-sizing: border-box; }
 
@@ -608,7 +608,8 @@ h6 {
   font-family: "Source Sans Pro", "Lucida Grande", "Tahoma", "Verdana", "Arial", sans-serif;
   font-size: 1em;
   line-height: 1.2;
-  margin: 0 0 0.75em; }
+  margin: 0 0 0.75em;
+  font-weight: 700; }
 
 article h1 {
   font-size: 1.5em; }
@@ -622,7 +623,8 @@ p {
 a {
   color: #21b4f0;
   text-decoration: none;
-  transition: color 0.1s linear; }
+  transition: color 0.1s linear;
+  font-weight: 600; }
   a:active, a:focus, a:hover {
     color: #0c86b8; }
   a:active, a:focus {
@@ -1024,17 +1026,22 @@ body #home {
     color: #fff;
     top: 0.75em; }
 
-.extension-feature section:first-child h2 {
+#dialogs .extension-feature section:first-child h2,
+#modal-dialogs .extension-feature section:first-child h2 {
   margin-top: 0.375em; }
-.extension-feature section:last-child {
+#dialogs .extension-feature section:last-child,
+#modal-dialogs .extension-feature section:last-child {
   padding: 0px; }
-.extension-feature ul li {
+#dialogs .extension-feature ul li,
+#modal-dialogs .extension-feature ul li {
   border-bottom: 1px solid #dfe3e7;
   padding: 0.75em; }
-  .extension-feature ul li a {
+  #dialogs .extension-feature ul li a,
+  #modal-dialogs .extension-feature ul li a {
     position: relative;
     display: block; }
-    .extension-feature ul li a:before {
+    #dialogs .extension-feature ul li a:before,
+    #modal-dialogs .extension-feature ul li a:before {
       content: "";
       font-family: "ScratchX";
       speak: none;
@@ -1053,14 +1060,17 @@ body #home {
       top: 50%;
       margin-top: -.5em;
       font-size: 1.5em; }
-  .extension-feature ul li h3 {
+  #dialogs .extension-feature ul li h3,
+  #modal-dialogs .extension-feature ul li h3 {
     font-size: 1.125em;
     font-weight: 600;
     margin-bottom: 0.375em; }
-  .extension-feature ul li p {
+  #dialogs .extension-feature ul li p,
+  #modal-dialogs .extension-feature ul li p {
     text-align: left;
     margin: 0;
-    color: #58595b; }
+    color: #58595b;
+    font-weight: normal; }
 
 footer {
   padding: 1.875em 0; }
