--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic,600italic);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700);
 
 body {
   @include font-feature-settings("kern", "liga", "pnum");
@@ -19,6 +19,7 @@ h6 {
   font-size: $base-font-size;
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
+  font-weight: 700;
 }
 
 article h1 {
@@ -48,6 +49,7 @@ a {
   &:focus {
     outline: none;
   }
+  font-weight: 600;
 }
 
 hr {
