--- a/sass/scratchx.scss
+++ b/sass/scratchx.scss
@@ -90,7 +90,9 @@ body {
 
 }
 
-.extension-feature {
+#dialogs .extension-feature,
+#modal-dialogs .extension-feature
+ {
     section:first-child {
         h2 {
             margin-top: $vertical-base;
@@ -129,6 +131,7 @@ body {
                 text-align: left;
                 margin: 0;
                 color: $base-font-color;
+                font-weight: normal;
             }
         }
     }
